--- a/msclientes/src/main/resources/application.yml
+++ b/msclientes/src/main/resources/application.yml
@@ -4,3 +4,10 @@ spring:
 
 server:
   port: 0
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${spring-cloud.application.instance_id:${random.value}}
